--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,9 +12,9 @@ pipeline {
                 sh "/opt/apache-maven-3.8.7/bin/mvn  test"
             }
         }
-        stage('Release') {
+        stage('Deploy') {
             steps {
-                archiveArtifacts: '**/target/*.jar', fingerprint: true
+                echo 'Deploying'
             }
         }
     }
