--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,12 +4,12 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh "/opt/apache-maven-3.8.6/bin/mvn  package"
+                sh "mvn  package"
             }
         }
         stage('Test') {
             steps {
-                sh "/opt/apache-maven-3.8.6/bin/mvn  test"
+                sh "mvn  test"
             }
         }
         stage('Deploy') {
