--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,9 +12,9 @@ pipeline {
                 sh " /opt/apache-maven-3.8.6/bin/mvn test"
             }
         }
-        stage('Deploy') {
+        stage('Release') {
             steps {
-                echo 'Deploying'
+                archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
             }
         }
     }
