fixed docker path

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         }
         stage('Release') {
             steps {
-                sh "docker build -t serdar52/java-17-demo:${BUILD_NUMBER}"
+                sh "docker build -t serdar52/java-17-demo:${BUILD_NUMBER} ."
                 archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
             }
         }
